; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_22969.c_timeout2.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_22969.c_timeout2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i64, i32 }

@TIMEOUT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @timeout2(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.timeval, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* @TIMEOUT, align 4
  %8 = getelementptr inbounds %struct.timeval, %struct.timeval* %4, i32 0, i32 1
  store i32 %7, i32* %8, align 8
  %9 = getelementptr inbounds %struct.timeval, %struct.timeval* %4, i32 0, i32 0
  store i64 0, i64* %9, align 8
  %10 = call i32 @FD_ZERO(i32* %5)
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @FD_SET(i32 %11, i32* %5)
  %13 = load i32, i32* %3, align 4
  %14 = add nsw i32 %13, 1
  %15 = call i32 @select(i32 %14, i32* %5, i32* null, i32* null, %struct.timeval* %4)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %1
  %19 = call i32 (...) @std_err()
  br label %20

20:                                               ; preds = %18, %1
  %21 = load i32, i32* %6, align 4
  %22 = icmp eq i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %20
  store i32 -1, i32* %2, align 4
  br label %25

24:                                               ; preds = %20
  store i32 0, i32* %2, align 4
  br label %25

25:                                               ; preds = %24, %23
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @FD_ZERO(i32*) #1

declare dso_local i32 @FD_SET(i32, i32*) #1

declare dso_local i32 @select(i32, i32*, i32*, i32*, %struct.timeval*) #1

declare dso_local i32 @std_err(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
